2013-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Fix endianness for initializers.

2013-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/stm8/support.c:
	  STM8: Remove unneeded global variable that clashes with identifiers in regression tests.
	* support/regression/tests/malloc.c,
	  support/regression/tests/gcc-torture-execute-920810-1.c:
	  STM8: Disable regression tests for unimplemented malloc().
	* src/stm8/gen.c:
	  STM8: Fix saving of a in early stack-to-stack copy, fix offset in stacked register operand, fix handling of operand in wide register in pointer set, fix endless loop in shifts.

2013-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix clr, partially by patch by Valentin Dudouyt.
	* src/stm8/main.c:
	  STM8:  Patch by Valentin Dudouyt to initialize global and static variables to zero.

2013-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Patch by Valentin Dudouyt to fix ldw.
	* src/stm8/main.c:
	  STM8: Patches by Valentin Dudouyt to fix handling of global variables and startup.

2013-05-11 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc,
	  sim/ucsim/stm8.src/instcl.h,
	  sim/ucsim/stm8.src/stm8.cc,
	  sim/ucsim/stm8.src/stm8mac.h,
	  support/regression/ports/stm8/support.c:
	  STM8: Patches by Valentin Dudouyt: The last bits to enable regression testing, fix bug in wide addition.
	* support/regression/tests/0fail.c,
	  support/regression/tests/0pass.c:
	  Removed dummy tests.
	* src/stm8/gen.c:
	  STM8: Fix handling of large operands partially in x in comparison for equality, be more careful in partial move for cast, fix signed cast.
	* src/hc08/gen.c,
	  src/z80/gen.c:
	  More efficient cast from _Bool.

2013-05-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/doc/asmlnk.txt: updated for all steps towards ASxxxx v5
	* sdas/doc/asxhtm.html: removed
	* .version,
	* doc/INSTALL.txt,