@@ -1,5 +1,10 @@
 2013-05-16 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/gen.c:
+	  STM8: Fix bit-field access.
+
+2013-05-16 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/stm8/main.c:
 	  STM8: Fix endianness for initializers.
 
